--- a/kooplexhub/kooplex/hub/templates/app/usermanagement.html
+++ b/kooplexhub/kooplex/hub/templates/app/usermanagement.html
@@ -41,7 +41,7 @@
                 {% csrf_token %}
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4>Delete a new user</h4>
+                        <h4>Delete a user</h4>
                     </div>
                     <div class="panel-body">
 
