--- a/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
@@ -1,5 +1,3 @@
-
-
 <div class=" col-md-6 col-sm-6 col-xs-12">
 <div class="panel panel-default ">
     <div class="panel-heading">
@@ -12,21 +10,22 @@
 
                     <p> {{ item.description }} </p>
                     <div>
-                        {% if item.report_type == "dashboard" %}
-                            {% if item.url %}
-                                <a href="{{ item.url }}" target="_blank">
+                        <a href="{{ item.url }}" target="_blank">
                                     <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</button></a>
-                            {% else %}
-                                <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span> No Dashboard Server for this</button>
-                            {% endif %}
-                        {% else %}
-                            <a href="{{ item.url }}" target="_blank">
-                            <button type="button" class="btn btn-info"><span class="glyphicon glyphicon-folder-open" aria-hidden="true"></span> Open</button></a>
-                        {% endif %}
-                        {%  if not publicvar %}
+                        {%  if pane == 'mine' %}
                                 <a href="{% url 'worksheet-unpublish' %}?report_id={{ item.id }}">
 
                             <button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Unpublish</button></a>
+                       <form class="form-horizontal" action="{% url 'reportschangescope' %}" method = "post">
+{% csrf_token %}
+                        <select name = "scope">
+                            <option value="private" {% if item.scope == 'private' %} selected {% endif %}>private</option>
+                            <option value="internal" {% if item.scope == 'internal' %} selected {% endif %}>internal</option>
+                            <option value="public" {% if item.scope == 'public' %} selected {% endif %}>public</option>
+                        </select>
+                            <input type = "hidden"  name = "reportid" value = "{{ item.id }}">
+                            <button type="submit" class="btn btn-warning"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Apply scope</button>
+</form>
                         {% endif  %}
                     </div>
                 </div>
