--- a/kooplexhub/kooplex/hub/templates/app/notebooks.html
+++ b/kooplexhub/kooplex/hub/templates/app/notebooks.html
@@ -23,13 +23,7 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
-          <li>
-            <a href="{% url 'toggle-oc' %}">
-              <button type="button" class="btn btn-lg  btn-primary navbar-btn" data-toggle="tooltip" title="Synchronize your files found in ~/oc/ with your owncloud storage" data-placement="bottom">
-                <span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>
-              </button>
-            </a>
-          </li>
+          <li><a href="#" data-toggle="modal" data-target="#owncloud"><button type="button" class="btn btn-lg  btn-primary navbar-btn" data-toggle="tooltip" title="Synchronize your files found in ~/oc/ with your owncloud storage" data-placement="bottom"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></button></a></li>
           <li><a href="#" data-toggle="modal" data-target="#project-new"><button type="button" class="btn btn-lg  btn-primary navbar-btn">Start new project </button></a></li>
 
         </ul>
@@ -37,6 +31,7 @@
     </div><!-- /.container-fluid -->
   </nav>
 
+{% include 'app/notebooks-owncloud.html' %}
 {% include 'app/notebooks-new-partial.html' with myprojects=True %}
 
 </div>
