report timestamp, creator added

--- a/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
+++ b/kooplexhub/kooplex/hub/templates/app/worksheet-partial.html
@@ -1,7 +1,7 @@
 <div class=" col-md-6 col-sm-6 col-xs-12">
 <div class="panel panel-default ">
     <div class="panel-heading">
-        <h4><strong>{{ item.name  }}</strong> - {{ item.creator_name }} - {{ item.file_name }}</h4>
+        <h4><strong>{{ item.name  }} [{{ item.ts_ }}]</strong> - {{ item.creator_name }} - {{ item.file_name }}</h4>
     </div>
     <div class="panel-body">
                 <div class="projects worksheet" style="text-align: center;">
